--- a/assets/fonts/OpirusOpikRegular-RgDv.css
+++ b/assets/fonts/OpirusOpikRegular-RgDv.css
@@ -1,3 +1,7 @@
+/*
+license: Creative Commons (by-sa) Attribution Share Alike
+link: https://www.fontspace.com/opirus-opik-font-f16232
+*/
 @font-face {
   font-family: 'OpirusOpikRegular-RgDv';
   src: url('./OpirusOpikRegular-RgDv.ttf') format('truetype');
